# TinyAArch64

./: .gitignore  Assembler.cpp  Assembler.h  CMakeLists.txt  CPU.cpp  CPU.h  Enums.h  Immdiate.h  Instruction.h  Log.h  Main.cpp  Main.h  README.md  Register.h  Test.cpp
misc/: mermaid-code.td
views/: AssembleView.h  DebugInfoView.h  MemoryView.h  RegisterView.h  View.h
